<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">オレクエ</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tab_1">ホーム</string>
    <string name="tab_2">友達</string>
    <string name="tab_3">ステータス</string>
    <string name="tab_4">ガチャ</string>
    <string name="tab_5">その他</string>
    <string name="post_button_send">送信</string>
    <string name="post_button_cancel">キャンセル</string>
    <string name="post_edit_message">input message</string>
    <string name="post_button_label">post</string>
    <string name="post_title">活動内容の投稿</string>
    <string name="post_category_title">カテゴリー:</string>
    <string name="post_tag_title">タグ:</string>
    <string name="post_time_title">活動時間:</string>
    <string name="post_start_time_title">活動開始時間</string>
    <string name="post_result_title">投稿結果</string>
    <string name="category_study">学問</string>
    <string name="category_fashion">ファッション</string>
    <string name="category_communication">コミュニケーション</string>
    <string name="category_social_study">社会勉強</string>
    <string name="category_sports">運動</string>
    <string name="category_art">芸術</string>
    <string name="post_activity_date_title">活動日</string>
    <string name="post_activity_start_time_title">開始時刻</string>
    <string name="post_time_hours">時間</string>
    <string name="post_time_minutes">分</string>
    <string name="home_default_name">真黒　佐門ノ助</string>
    <string name="home_level">Lv.</string>
    <string name="home_logall">ぼうけんしゃたち の きろく</string>
    <string name="home_logmine">自分の記録</string>
    <string name="home_corp">連携</string>
    <string name="home_duration">分活動</string>
    <string name="home_point">ポイント獲得</string>
    <string name="home_hour">時間</string>
    <string name="home_friend_detail_dialog_title">友達詳細</string>
    <string name="friend_remove">➤ 削除</string>
    <string name="post_result_up">あがった。</string>
    <string name="post_result_study">勉強が</string>
    <string name="post_result_sociaty">社会勉強が</string>
    <string name="post_result_excercise">運動が</string>
    <string name="post_result_art">芸術が</string>
    <string name="post_result_fashion">ファッションが</string>
    <string name="post_result_communication">コミュニケーションが</string>
    <string name="gacha_draw">➤ カードをひく (5G)</string>
    <string name="gacha_list">➤ もちもの</string>
    <string name="post_no_time_activity_message">活動時間が0分です。修正してください。</string>
    <string name="posted_message">活動を投稿した。</string>
    <string name="title">職業</string>
    <string name="prefix">称号</string>
    <string name="post_result_getted_message">を手に入れた!</string>
    <string name="post_result_get_job_message">になれるようになった!</string>
    <string name="gacha_shoji">まい</string>
    <string name="gacha_money">おかね : </string>
    <string name="gacha_coin">G</string>
    <string name="gacha_back">➤ もどる</string>
    <string name="gacha_getcomment">を　手に入れた！</string>
    <string name="gacha_triangle">▼</string>
    <string name="gacha_no">No.</string>
    <string name="gacha_saeki">「佐伯 教授」</string>
    <string name="gacha_tanaka">「田中 特任准教授」</string>
    <string name="gacha_morimoto">「森本 特任講師」</string>
    <string name="gacha_gondow">「権藤 教授」</string>
    <string name="gacha_kobayashi">「小林 准教授」</string>
    <string name="gacha_shudo">「首藤 准教授」</string>
    <string name="gacha_sato">「佐藤 教授」</string>
    <string name="gacha_takuo">「渡部 准教授」</string>
    <string name="gacha_nisizaki">「西崎 准教授(パンダver)」</string>
    <string name="gacha_hayashi">「林 助教」</string>
    <string name="coin">コイン</string>
    <string name="level">レベルが</string>
    <string name="upped">上がった!</string>
    <string name="home_money">おかね : </string>
    <string name="triangle">▼</string>
    <string name="gacha_hagihara">「萩原 助教」</string>
    <string name="gacha_yonezaki">「米崎 教授」</string>
    
</resources>