<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/middle_color"
    android:orientation="vertical" 
        android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/getcardframe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_gacha_main"
        android:gravity="center"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="400dp"
            android:layout_height="500dp"
            android:gravity="center" >

            <ImageView
                android:id="@+id/gacha_card"
                android:layout_width="400dp"
                android:layout_height="500dp"
                android:src="@drawable/bg_tab" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/getcardframe"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/frame"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/gacha_getcom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gacha_getcomment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/gacha_triangle" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_gacha_main"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="10dp"
        android:text="@string/gacha_back"
        android:textColor="#FFF" />

</RelativeLayout>